# phoenix_ML

./: .dockerignore  .env.backup  .env.example  .env.local  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile.airflow  Dockerfile.mlflow  HUONG_DAN_HOC_CODE.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  alembic.ini  compose.yaml  docker-compose.airflow.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-entrypoint.sh  dvc.yaml  index.html  mkdocs.yml  models.dvc  phoenix.db  phoenix_test.db  project.md  prometheus.yml  pyproject.toml
.dvc/: config
.dvc/tmp/: lock
.github/workflows/: ci.yaml  docs.yaml
Documents/mlops/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  demo.sh  mkdocs.yml  phoenix.db  pyproject.toml
Documents/mlops/.github/workflows/: ci.yaml
Documents/mlops/docs/: index.md
Documents/mlops/docs/adr/: 001-use-ddd-architecture.md
Documents/mlops/frontend/: tailwind.config.js
Documents/mlops/frontend/src/: App.tsx
Documents/mlops/frontend/src/types/: index.ts
Documents/mlops/grafana/provisioning/dashboards/: provider.yml
Documents/mlops/scripts/: simulate_drift.py  simulate_traffic.py  train_challenger.py
Documents/mlops/src/: config.py
Documents/mlops/src/application/commands/: predict_command.py  trigger_retrain_command.py
Documents/mlops/src/application/dto/: prediction_request.py
Documents/mlops/src/application/handlers/: predict_handler.py
Documents/mlops/src/application/services/: monitoring_service.py
Documents/mlops/src/domain/feature_store/repositories/: feature_store.py
Documents/mlops/src/domain/inference/entities/: model.py  prediction.py
Documents/mlops/src/domain/inference/events/: model_loaded.py  prediction_made.py
Documents/mlops/src/domain/inference/repositories/: model_repository.py
Documents/mlops/src/domain/inference/services/: inference_engine.py
Documents/mlops/src/domain/inference/value_objects/: confidence_score.py  feature_vector.py  model_version.py
Documents/mlops/src/domain/model_registry/repositories/: artifact_storage.py
Documents/mlops/src/domain/monitoring/repositories/: prediction_log_repository.py
Documents/mlops/src/domain/monitoring/services/: drift_calculator.py
Documents/mlops/src/infrastructure/artifact_storage/: local_artifact_storage.py
Documents/mlops/src/infrastructure/feature_store/: in_memory_feature_store.py  redis_feature_store.py
Documents/mlops/src/infrastructure/http/: fastapi_server.py
Documents/mlops/src/infrastructure/messaging/: kafka_producer.py
Documents/mlops/src/infrastructure/ml_engines/: mock_engine.py  onnx_engine.py
Documents/mlops/src/infrastructure/monitoring/: in_memory_log_repo.py  prometheus_metrics.py
Documents/mlops/src/infrastructure/persistence/: database.py  in_memory_model_repo.py  models.py  postgres_log_repo.py  postgres_model_registry.py  postgres_model_repo.py
Documents/mlops/tests/integration/: test_real_model_inference.py
Documents/mlops/tests/unit/application/: test_load_model_handler.py  test_monitoring_service.py  test_predict_handler.py  test_predict_handler_routing.py
Documents/mlops/tests/unit/domain/inference/: test_domain_models.py  test_model_version.py  test_routing_strategy.py
Documents/rust-opencv/: Cargo.toml  command.md  udp_receiver.py
adr/001-use-ddd-architecture/: index.html
adr/002-use-onnx-runtime/: index.html
adr/003-use-kafka-for-event-streaming/: index.html
adr/004-observability-with-prometheus-grafana/: index.html
adr/005-dvc-data-versioning/: index.html
alembic/: env.py  script.py.mako
alembic/versions/: 8e03d4fe1b79_initial_schema_models_prediction_logs_.py
api/reference/: index.html
architecture/system-design/: index.html
benchmarks/: RESULTS.md  benchmark_report.py  latency_benchmark.py  load_test.py  locustfile.py  memory_benchmark.py  throughput_benchmark.py
blog/performance-optimization/: index.html
blog/self-healing-ml/: index.html
blog/system-design-overview/: index.html
dags/: data_change_pipeline.py  retrain_pipeline.py  training_pipeline_dag.py
data/: reference_data.json  reference_features.json
deploy/nginx/: nginx.conf
deployment/docker-stack/: index.html
docs/: index.md  project-structure.md
docs/adr/: 001-use-ddd-architecture.md  002-use-onnx-runtime.md  003-use-kafka-for-event-streaming.md  004-observability-with-prometheus-grafana.md  005-dvc-data-versioning.md
docs/api/: reference.md
docs/architecture/: ddd-overview.md  system-design.md
docs/blog/: performance-optimization.md  self-healing-ml.md  system-design-overview.md
docs/deployment/: docker-stack.md
docs/frontend/: architecture.md
docs/guides/: customization.md  getting-started.md  library-api.md  monitoring.md  troubleshooting.md
docs/tutorials/: credit-risk.md  fraud-detection.md  house-price.md  image-classification.md  sentiment-analysis.md
examples/credit_risk/: train.py
examples/fraud_detection/: train.py
examples/house_price/: train.py
examples/image_classification/: train.py
examples/sentiment/: train.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/architecture/: index.html
frontend/src/: App.tsx  config.ts  index.css
grafana/dashboards/: phoenix-ml.json
guides/customization/: index.html
guides/getting-started/: index.html
guides/library-api/: index.html
guides/monitoring/: index.html
guides/troubleshooting/: index.html
model_configs/: credit-risk.yaml  fraud-detection.yaml  house-price.yaml  image-class.yaml  object-detection.yaml  sentiment.yaml
notebooks/: 01_inference_demo.ipynb  02_drift_detection_demo.ipynb  03_self_healing_demo.ipynb  04_ab_testing_demo.ipynb
phoenix_ml/: __init__.py  platform.py
project-structure/: index.html
scripts/: generate_datasets.py  ingest_real_data.py  run_production_simulation.py  seed_features.py  simulate_drift.py  simulate_pipeline.py  simulate_traffic.py  test_monitoring_flows.py  test_real_e2e.py  train_challenger.py  train_model.py
search/: search_index.json
src/: __init__.py  config.py
tests/: conftest.py
(+498 files in other folders)
