[project]
name = "phoenix-ml-platform"
version = "0.1.0"
description = "High-throughput, Low-latency Real-time ML Inference System designed with DDD and SOLID principles."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Phoenix ML Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["mlops", "inference", "serving", "monitoring", "drift-detection", "onnx"]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.7",
    "pydantic-settings>=2.0.0",
    "onnxruntime>=1.16.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    "aiosqlite>=0.19.0",
    "onnx>=1.20.0",
    "prometheus-client>=0.23.1",
    "aiokafka>=0.13.0",
    "types-requests>=2.32.4.20250913",
    "grpcio>=1.60.0",
    "httpx>=0.26.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "boto3>=1.34.0",
    "mlflow>=2.10.0",
    "xgboost>=3.2.0",
    "onnxmltools>=1.16.0",
    "dvc[s3]>=3.50.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "shap>=0.50.0",
    "numba>=0.60.0",
    "optuna>=3.0",
]

[project.urls]
Homepage = "https://github.com/phoenix-ml/phoenix-ml-platform"
Documentation = "https://phoenix-ml.github.io/phoenix-ml-platform/"
Repository = "https://github.com/phoenix-ml/phoenix-ml-platform"
Issues = "https://github.com/phoenix-ml/phoenix-ml-platform/issues"

[project.scripts]
phoenix-serve = "src.infrastructure.http.fastapi_server:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
    "asgi-lifespan>=2.1.0",
    "grpcio-tools>=1.60.0",
    "locust>=2.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]


[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "src/infrastructure/grpc/proto/inference_pb2.py",
    "src/infrastructure/grpc/proto/inference_pb2_grpc.py",
    "notebooks/",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "PL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PLC0415"]
"scripts/*" = ["PLR2004", "PLC0415"]
"src/infrastructure/bootstrap/lifespan.py" = ["PLR0912"]
"src/domain/monitoring/services/explainability_service.py" = ["PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
disallow_untyped_defs = true
exclude = [
    "src/infrastructure/grpc/proto/.*",
    "benchmarks/.*",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
asyncio_mode = "auto"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.10",
    "types-protobuf>=6.32.1.20260221",
]
